--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
